--- a/.gitmodules
+++ b/.gitmodules
@@ -1198,3 +1198,7 @@
 	path = extensions/GTag
 	url = https://github.com/SkizNet/mediawiki-GTag/
 	branch = master
+[submodule "extensions/TelepediaMagic"]
+	path = extensions/TelepediaMagic
+	url = https://gitlab.com/telepedia/extensions/TelepediaMagic
+	branch = main
