Add EmbedVideo; yet again?

--- a/.gitmodules
+++ b/.gitmodules
@@ -1202,3 +1202,6 @@
 	path = extensions/TelepediaAds
 	url = https://gitlab.com/telepedia/extensions/telepediaads
 	branch = main
+[submodule "extensions/EmbedVideo"]
+	path = extensions/EmbedVideo
+	url = https://gitlab.com/hydrawiki/extensions/EmbedVideo.git
