--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,8 @@ updates:
     directory: "/"
     labels: []
     schedule:
-      interval: monthly
-      time: "00:00"
+      interval: daily
+      time: "12:10:"
     open-pull-requests-limit: 750
     rebase-strategy: auto
     target-branch: REL1_39
