--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-  - package-ecosystem: gitsubmodule
+  - package-ecosystem: gitsubmodules
     directory: "/"
     labels: []
     schedule:
