--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -16,7 +16,7 @@ jobs:
         submodule=$(echo $(echo ${GITHUB_HEAD_REF} | cut -d'/' -f4,5 ) | cut -d'-' -f1 )
         git submodule update --init $submodule
         git fetch https://github.com/${GITHUB_REPOSITORY} ${GITHUB_HEAD_REF}
-        git rebase FETCH_HEAD
+        git merge FETCH_HEAD --allow-unrelated-histories
         list=$(git -c color.diff=false diff --submodule=diff $submodule | sed -n -e s/^diff\ --git\ a\\///p)
         pull_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
 
